2007-09-25  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/main.h, src/main.cc (get_osso_context): New. Function to
	retrieve the osso_context_t variable initialized in the main
	function from out of main.cc (N70767).
	(Include <libosso.h>): Moved from main.cc to main.h, to define the
	new function commented above (N70767).

	* src/operations.cc (ip_suggest_backup): Changed the method to
	invoke the osso-backup application: now using the
	osso_application_top function instead of the run_cmd utility
	function, to avoid having more than one instance of osso-backup
	when pressing the 'Backup' button (N70767).
	(ip_suggest_backup_cmd_done): Removed, since it's not needed
	because run_cmd it's not used now to launch osso-backup (N70767).

	* src/apt-worker.cc (operation): Changed to use recursion instead
	of an iterative loop here, in order to have a cleaner and better
	understandable code, and taking into account that there shouldn't
	be noticeable efficiency problems in this case.

2007-09-24  Marius Vollmer  <marius.vollmer@nokia.com>

	Released 1.9.23

2007-09-20  Mario Sanchez Prada  <msanchez@maemo.org>

	* src/repo.cc (set_cat_list): Added a new parameter to specify a
	GtkTreeIter pointing to the element of the treeview that will be
	focused after rendering it (N67880).
	(cat_edit_response): Update call to set_cat_list to set the
	currently selected iter as the iter to be focused (N67880).
	(refresh_cat_list): Update call to set_cat_list using NULL as the
	new parameter, since it's not needed to focus any iter (N67880).
	(remove_cat_cont): Update call to set_cat_list using NULL as the
	new parameter, since it's not needed to focus any iter (N67880).
	(show_catalogue_dialog): Moved the creation of the treeview after
	setting the sensitiveness to buttons, to let the signals work and
	set it as is needed according to the selected item (N67880).

2007-09-19  Mario Sanchez Prada  <msanchez@maemo.org>

	* utils/maemo-select-menu-location-main.c (dialog_exposed):