@@ -1,6 +1,6 @@
 hildon-application-manager (1:1.9.24~unreleased) unstable; urgency=low
 
-  * Fixes: NB#70767.
+  * Fixes: NB#70767, NB#70914.
 
  -- Marius Vollmer <marius.vollmer@nokia.com>  Mon, 24 Sep 2007 21:57:57 +0300
 
